# java-nav

./: .gitignore  .gitmodules  CLAUDE.md  IMPLEMENTATION.md  PLAN.md  README.md  pyproject.toml
playground/: .project  pom.xml
playground/src/main/java/com/example/: App.java
playground/src/main/java/com/example/model/: User.java
playground/src/main/java/com/example/processor/: AbstractProcessor.java  EmailProcessor.java  SmsProcessor.java
playground/src/main/java/com/example/repository/: FileUserRepository.java  InMemoryUserRepository.java  Repository.java
playground/src/main/java/com/example/service/: UserService.java
src/java_nav/: classpath.py  cli.py
src/java_nav/commands/: api.py  definition.py  deps.py  find.py  grep.py  impls.py  install.py  lsp_cmd.py  refs.py  source.py  symbols.py
src/java_nav/java-nav/: SKILL.md
src/java_nav/lsp/: _daemon_proc.py  client.py  server.py
tests/: conftest.py  test_api.py  test_classpath.py  test_deps.py  test_grep.py  test_impls.py  test_install.py  test_integration.py  test_lsp.py  test_source.py
tools/classgraph-scanner/: pom.xml
tools/classgraph-scanner/src/main/java/tools/: FindTypes.java
