[project]
name = "java-nav"
version = "0.1.0"
description = "CLI tools for IDE-like Java navigation in AI agents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dmitry Petrov", email = "dvpetrov.main@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
java-nav = "java_nav.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
